# Generateur-d-architecture-

./: .gitignore  Cargo.toml  INSTALLATION.md  README.md  build.sh  make_project.rs  post.md
.github/workflows/: build.yml
doc and exemple/: regex.md
old_code/: code.rs
src/: main.rs
src/ui/: view.rs
src/utils/: fs_handler.rs  helper.rs  mod.rs  parser.rs
