[package]
name = "projet-structure-generator"
version = "0.1.0"
edition = "2021"  # Note: 2024 n'existe pas encore comme édition

[dependencies]
# Pour les expressions régulières
regex = "1.9.5"

# Pour la gestion des chemins
walkdir = "2.4.0"

# Pour l'analyse des arguments de ligne de commande
clap = { version = "4.4", features = ["derive"] }

# Pour une meilleure gestion des erreurs
anyhow = "1.0.75"

# Pour de meilleures messages d'erreur formatés
color-eyre = "0.6.2"

# Pour la journalisation
log = "0.4.20"
env_logger = "0.11.8"

rfd = "0.15.3"     # Pour ouvrir un sélecteur de fichiers cross-platform
# Pour eframe, vérifiez les fonctionnalités disponibles


egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
# Pour le support d'image
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
